--- a/main/http_server/axe-os/src/app/pages/influxdb/influxdb.component.html
+++ b/main/http_server/axe-os/src/app/pages/influxdb/influxdb.component.html
@@ -43,11 +43,14 @@
                         <input nbInput id="influxPrefix" formControlName="influxPrefix" type="text" />
                     </div>
                 </div>
+                <div class="mt-2">
+                    <button nbButton size="small" [disabled]="form.invalid" (click)="updateSystem()" [status]="'danger'">Save</button>&nbsp;
+                    <b>You must restart this device after saving for changes to take effect.</b>
+                </div>
+                <div class="mt-2">
+                    <button nbButton size="small" (click)="restart()" status="danger" >Restart</button>
+                </div>
             </nb-card-body>
-            <nb-card-footer>
-                <button nbButton [disabled]="form.invalid" (click)="updateSystem()" [status]="'danger'">Save</button>&nbsp;
-                <b>You must restart this device after saving for changes to take effect.</b>
-            </nb-card-footer>
         </nb-card>
     </form>
 </ng-container>
