gray background for log in lightmode too for orange warning color

--- a/main/http_server/axe-os/src/app/pages/system/system.component.scss
+++ b/main/http_server/axe-os/src/app/pages/system/system.component.scss
@@ -17,7 +17,7 @@
     border: 1px solid #304562;
     overflow-y: scroll;
     overflow-x: hidden;
-
+    background-color: #404040;
     >div {
         max-width: 100%;
         line-break: anywhere;
@@ -32,7 +32,7 @@
 }
 
 :host ::ng-deep .ansi-red { color: #ff0000 !important; }
-:host ::ng-deep .ansi-green { color: #00af00 !important; }
+:host ::ng-deep .ansi-green { color: #00ff00 !important; }
 :host ::ng-deep .ansi-yellow { color: #ffff00 !important; }
 :host ::ng-deep .ansi-blue { color: #0000ff !important; }
 :host ::ng-deep .ansi-magenta { color: #ff00ff !important; }
