pro mode switch that remembers its state for 24h, some other fixes

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -18,8 +18,10 @@
                 <div class="form-row">
                     <label for="wifiPass" class="form-label">WiFi Password:</label>
                     <div class="input-with-icon">
-                        <input nbInput id="wifiPass" formControlName="wifiPass" [type]="showWifiPassword ? 'text' : 'password'" placeholder="Enter WiFi password" />
-                        <button nbButton ghost size="small" (click)="toggleWifiPasswordVisibility()" type="button" class="icon-button">
+                        <input nbInput id="wifiPass" formControlName="wifiPass"
+                            [type]="showWifiPassword ? 'text' : 'password'" placeholder="Enter WiFi password" />
+                        <button nbButton ghost size="small" (click)="toggleWifiPasswordVisibility()" type="button"
+                            class="icon-button">
                             <nb-icon [icon]="showWifiPassword ? 'eye-off-outline' : 'eye-outline'" pack="eva"></nb-icon>
                         </button>
                     </div>
@@ -33,7 +35,7 @@
                     <div class="form-row">
                         <label for="stratumURL" class="form-label">Stratum URL:</label>
                         <div class="form-control-wrapper">
-                            <input nbInput id="stratumURL" type="text" formControlName="stratumURL" /><br/>
+                            <input nbInput id="stratumURL" type="text" formControlName="stratumURL" /><br />
                             <small>Do not include 'stratum+tcp://' or port.</small>
                         </div>
                     </div>
@@ -52,9 +54,13 @@
                     <div class="form-row">
                         <label for="stratumPassword" class="form-label">Stratum Password:</label>
                         <div class="input-with-icon">
-                            <input nbInput id="stratumPassword" formControlName="stratumPassword" [type]="showStratumPassword ? 'text' : 'password'" placeholder="Enter stratum password" />
-                            <button nbButton ghost (click)="toggleStratumPasswordVisibility()" type="button" class="icon-button">
-                                <nb-icon [icon]="showStratumPassword ? 'eye-off-outline' : 'eye-outline'" pack="eva"></nb-icon>
+                            <input nbInput id="stratumPassword" formControlName="stratumPassword"
+                                [type]="showStratumPassword ? 'text' : 'password'"
+                                placeholder="Enter stratum password" />
+                            <button nbButton ghost (click)="toggleStratumPasswordVisibility()" type="button"
+                                class="icon-button">
+                                <nb-icon [icon]="showStratumPassword ? 'eye-off-outline' : 'eye-outline'"
+                                    pack="eva"></nb-icon>
                             </button>
                         </div>
                     </div>
@@ -66,14 +72,16 @@
                     <div class="form-row">
                         <label for="fallbackStratumURL" class="form-label">Stratum URL:</label>
                         <div class="form-control-wrapper">
-                            <input nbInput id="fallbackStratumURL" type="text" formControlName="fallbackStratumURL" /><br/>
+                            <input nbInput id="fallbackStratumURL" type="text"
+                                formControlName="fallbackStratumURL" /><br />
                             <small>Do not include 'stratum+tcp://' or port.</small>
                         </div>
                     </div>
                     <div class="form-row">
                         <label for="fallbackStratumPort" class="form-label">Stratum Port:</label>
                         <div class="form-control-wrapper">
-                            <input nbInput id="fallbackStratumPort" formControlName="fallbackStratumPort" type="number" />
+                            <input nbInput id="fallbackStratumPort" formControlName="fallbackStratumPort"
+                                type="number" />
                         </div>
                     </div>
                     <div class="form-row">
@@ -85,9 +93,13 @@
                     <div class="form-row">
                         <label for="fallbackStratumPassword" class="form-label">Stratum Password:</label>
                         <div class="input-with-icon">
-                            <input nbInput id="fallbackStratumPassword" formControlName="fallbackStratumPassword" [type]="showFallbackStratumPassword ? 'text' : 'password'" placeholder="Enter stratum password" />
-                            <button nbButton ghost (click)="toggleFallbackStratumPasswordVisibility()" type="button" class="icon-button">
-                                <nb-icon [icon]="showFallbackStratumPassword ? 'eye-off-outline' : 'eye-outline'" pack="eva"></nb-icon>
+                            <input nbInput id="fallbackStratumPassword" formControlName="fallbackStratumPassword"
+                                [type]="showFallbackStratumPassword ? 'text' : 'password'"
+                                placeholder="Enter stratum password" />
+                            <button nbButton ghost (click)="toggleFallbackStratumPasswordVisibility()" type="button"
+                                class="icon-button">
+                                <nb-icon [icon]="showFallbackStratumPassword ? 'eye-off-outline' : 'eye-outline'"
+                                    pack="eva"></nb-icon>
                             </button>
                         </div>
                     </div>
@@ -96,14 +108,20 @@
         </nb-tabset>
 
         <nb-card>
-            <nb-card-header>Mining Settings</nb-card-header>
+            <nb-card-header>
+                <div class="d-flex align-items-center justify-content-between mt-2">
+                    <div>Mining Settings</div>
+                    <div><app-advanced-toggle (advancedToggled)="setDevToolsOpen($event)"></app-advanced-toggle></div>
+                </div>
+            </nb-card-header>
             <nb-card-body>
                 <ng-container *ngIf="!devToolsOpen">
                     <div class="form-row">
                         <label for="frequency" class="form-label">Frequency:</label>
                         <div class="form-control-wrapper">
                             <nb-select formControlName="frequency">
-                                <nb-option *ngFor="let option of frequencyOptions" [value]="option.value">{{ option.name }}</nb-option>
+                                <nb-option *ngFor="let option of frequencyOptions" [value]="option.value">{{ option.name
+                                    }}</nb-option>
                             </nb-select>
                         </div>
                     </div>
@@ -111,7 +129,8 @@
                         <label for="coreVoltage" class="form-label">Core Voltage:</label>
                         <div class="form-control-wrapper">
                             <nb-select formControlName="coreVoltage">
-                                <nb-option *ngFor="let option of voltageOptions" [value]="option.value">{{ option.name }}</nb-option>
+                                <nb-option *ngFor="let option of voltageOptions" [value]="option.value">{{ option.name
+                                    }}</nb-option>
                             </nb-select>
                         </div>
                     </div>
@@ -141,7 +160,7 @@
                 <div class="form-row">
                     <label for="overheat_temp" class="form-label">Shutdown Temperature:</label>
                     <div class="form-control-wrapper">
-                        <input nbInput id="overheat_temp" formControlName="overheat_temp" type="number" /><br/>
+                        <input nbInput id="overheat_temp" formControlName="overheat_temp" type="number" /><br />
                         <small>Shutdown Temperature in °C. To turn off use "0"</small>
                     </div>
                 </div>
@@ -152,7 +171,7 @@
                 <div class="form-row">
                     <nb-checkbox formControlName="autoscreenoff">Automatic Screen Shutdown</nb-checkbox>
                 </div>
-                <div class="form-row">
+                <div class="form-row" *ngIf="devToolsOpen">
                     <nb-checkbox formControlName="invertfanpolarity">Invert Fan Polarity</nb-checkbox>
                 </div>
                 <div class="form-row">
@@ -162,29 +181,26 @@
                 <div *ngIf="form.controls['autofanspeed'].value !== true">
                     <label>Fan Speed {{ form.controls['fanspeed'].value }}%</label>
                     <div class="progress-wrap">
-                        <input
-                            type="range"
-                            class="progress"
-                            formControlName="fanspeed"
-                            min="0"
-                            max="100"
-                            step="1"
-                        />
+                        <input type="range" class="progress" formControlName="fanspeed" min="0" max="100" step="1" />
                         <div class="progress-foreground" [style.width.%]="form.controls['fanspeed'].value"></div>
                     </div>
-                    <small *ngIf="form.controls['fanspeed'].value < 33" style="color: red">Danger: Could Cause Overheating</small>
+                    <small *ngIf="form.controls['fanspeed'].value < 33" style="color: red">Danger: Could Cause
+                        Overheating</small>
                     <small *ngIf="form.controls['fanspeed'].value === 100" style="color: #F2A900">S19 Simulator</small>
                 </div>
 
-                <div class="mt-2">
-                    <button nbButton size="small" [disabled]="form.invalid" (click)="updateSystem()" [status]="'danger'">Save</button>&nbsp;
-                    <b>You must restart this device after saving for changes to take effect.</b>
+                <div class="d-flex align-items-center justify-content-between mt-2">
+                    <div><button nbButton size="small" [disabled]="form.invalid" (click)="updateSystem()"
+                            [status]="'danger'">Save</button></div>
+                    <div><button nbButton size="small" (click)="restart()" nbTooltip="'asdf'"
+                            status="danger">Restart</button>
+                    </div>
+
                 </div>
-                <div class="mt-2">
-                    <button nbButton size="small" (click)="restart()" status="danger" >Restart</button>
+                <div>
+                    <b>You must restart this device after saving for changes to take effect.</b>
                 </div>
             </nb-card-body>
         </nb-card>
     </form>
 </ng-container>
-
