--- a/main/http_server/axe-os/src/app/pages/influxdb/influxdb.component.html
+++ b/main/http_server/axe-os/src/app/pages/influxdb/influxdb.component.html
@@ -9,7 +9,8 @@
                 <div class="form-row">
                     <label for="influxURL" class="form-label">Influx URL:</label>
                     <div class="form-control-wrapper">
-                        <input nbInput id="influxURL" type="text" formControlName="influxURL" placeholder="e.g., http://192.168.0.123" /><br/>
+                        <input nbInput id="influxURL" type="text" formControlName="influxURL"
+                            placeholder="e.g., http://192.168.0.123" /><br />
                         <small>e.g., http://192.168.0.123</small>
                     </div>
                 </div>
@@ -43,15 +44,18 @@
                         <input nbInput id="influxPrefix" formControlName="influxPrefix" type="text" />
                     </div>
                 </div>
-                <div class="mt-2">
-                    <button nbButton size="small" [disabled]="form.invalid" (click)="updateSystem()" [status]="'danger'">Save</button>&nbsp;
-                    <b>You must restart this device after saving for changes to take effect.</b>
+                <div class="d-flex align-items-center justify-content-between mt-2">
+                    <div><button nbButton size="small" [disabled]="form.invalid" (click)="updateSystem()"
+                            [status]="'danger'">Save</button>&nbsp;
+                    </div>
+                    <div><button nbButton size="small" (click)="restart()" nbTooltip="'asdf'"
+                            status="danger">Restart</button></div>
+
                 </div>
-                <div class="mt-2">
-                    <button nbButton size="small" (click)="restart()" status="danger" >Restart</button>
+                <div>
+                    <b>You must restart this device after saving for changes to take effect.</b>
                 </div>
             </nb-card-body>
         </nb-card>
     </form>
 </ng-container>
-
