--- a/main/http_server/axe-os/src/app/pages/swarm/swarm.component.html
+++ b/main/http_server/axe-os/src/app/pages/swarm/swarm.component.html
@@ -84,9 +84,9 @@
                         <th>Temp</th>
                         <th>Best Diff</th>
                         <th>Version</th>
-                        <th>Edit</th>
-                        <th>Restart</th>
-                        <th>Remove</th>
+                        <th>&nbsp;</th>
+                        <th>&nbsp;</th>
+                        <th>&nbsp;</th>
                     </tr>
                 </thead>
                 <tbody>
