added bounds to temp range, removed 0 == disabled

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -164,8 +164,7 @@
                 <div class="form-row">
                     <label for="overheat_temp" class="form-label">Shutdown Temperature:</label>
                     <div class="form-control-wrapper">
-                        <input nbInput id="overheat_temp" formControlName="overheat_temp" type="number" /><br />
-                        <small>Shutdown Temperature in °C. To turn off use "0"</small>
+                        <input nbInput id="overheat_temp" formControlName="overheat_temp" type="number" />
                     </div>
                 </div>
 
