changed pro mode button to warn icon, make it a little bit more easy to overlook, add red background for unsafe values

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -144,13 +144,15 @@
                     <div class="form-row">
                         <label for="frequency" class="form-label">Frequency:</label>
                         <div class="form-control-wrapper">
-                            <input nbInput id="frequency" formControlName="frequency" type="number" />
+                            <input (input)="checkFrequencyLimit()" [ngClass]="{'unsafe-setting': isFrequencyTooHigh()}"
+                                nbInput id="frequency" formControlName="frequency" type="number" />
                         </div>
                     </div>
                     <div class="form-row">
                         <label for="coreVoltage" class="form-label">Core Voltage:</label>
                         <div class="form-control-wrapper">
-                            <input nbInput id="coreVoltage" formControlName="coreVoltage" type="number" />
+                            <input (input)="checkVoltageLimit()" [ngClass]="{'unsafe-setting': isVoltageTooHigh()}"
+                                nbInput id="coreVoltage" formControlName="coreVoltage" type="number" />
                         </div>
                     </div>
                     <div class="form-row">
