--- a/main/http_server/axe-os/src/app/components/advanced-toggle/advanced-toggle.component.html
+++ b/main/http_server/axe-os/src/app/components/advanced-toggle/advanced-toggle.component.html
@@ -1,5 +1,7 @@
-<button nbButton
-        size="small"
-        [class.enabled]="isAdvanced"
-        (click)="toggleAdvanced()"
-        [status]="isAdvanced ? 'danger' : 'info'">PRO</button>
+<button nbButton size="small"
+        [nbTooltip]="isAdvanced ? 'Advanced mode enabled' : 'Enable advanced overclocking (dangerous!)'"
+        [nbTooltipStatus]="isAdvanced ? 'danger' : 'warning'" nbTooltipPlacement="top" [class.enabled]="isAdvanced"
+        (click)="toggleAdvanced()" [status]="isAdvanced ? 'danger' : 'basic'"
+        [style.opacity]="isAdvanced ? '1' : '0.1'">
+        <nb-icon icon="alert-triangle-outline"></nb-icon>
+</button>
