--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
@@ -140,4 +140,12 @@
     button {
         width: 80px;
     }
+
+    .unsafe-setting {
+        background-color: rgba(255, 0, 0, 0.2) !important; // Light red
+        border: 2px solid red !important;
+        transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out !important; // Smooth transition
+      }
+
+
 }
